// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Btn As Link 1`] = `
<a
  class="inline-block py-2 px-4 bg-green-200 text-green-900 rounded"
  href="#"
>
  Click me
</a>
`;

exports[`Storyshots Btn Block 1`] = `
<button
  class="inline-block py-2 px-4 bg-green-200 text-green-900 rounded w-full"
  type="button"
>
  Click me
</button>
`;

exports[`Storyshots Btn Default 1`] = `
<button
  class="inline-block py-2 px-4 bg-green-200 text-green-900 rounded"
  type="button"
>
  Click me
</button>
`;

exports[`Storyshots Btn Disabled 1`] = `
<button
  class="inline-block py-2 px-4 bg-green-200 text-green-900 rounded cursor-not-allowed opacity-75"
  disabled="disabled"
  type="button"
>
  Click me
</button>
`;

exports[`Storyshots Btn Type Submit 1`] = `
<button
  class="inline-block py-2 px-4 bg-green-200 text-green-900 rounded"
  type="submit"
>
  Click me
</button>
`;

exports[`Storyshots Btn With Custom Classes 1`] = `
<button
  class="font-bold inline-block py-2 px-4 bg-green-200 text-green-900 rounded"
  type="button"
>
  Click me
</button>
`;

exports[`Storyshots Btn With Multiple Variants 1`] = `
<button
  class="inline-block py-2 px-4 bg-green-200 text-green-900 rounded bg-blue-200 text-blue-900 py-3 px-5 text-lg"
  type="button"
>
  Click me
</button>
`;

exports[`Storyshots Btn With Variant 1`] = `
<button
  class="inline-block py-2 px-4 bg-green-200 text-green-900 rounded bg-blue-200 text-blue-900"
  type="button"
>
  Click me
</button>
`;
